# molmoact2

./: .gitignore  .gitmodules  CLAUDE.md  COLLECTION_QUICKSTART.md  README.md  SERVING_QUICKSTART.md  pyproject.toml  rerun-yam-port-plan.md
examples/droid/: host_server_droid.py
examples/yam/: host_server_yam.py
experiments/: modal_serve.py  modal_train.py
experiments/launch_scripts/: data_mixtures.py
sim_eval/: README.md  __init__.py  run_eval.py
sim_eval/inference/: __init__.py  client.py  common.py
sim_eval/robots/: __init__.py  bimanual_yam.py  franka_droid.py
sim_eval/scripts/: download_assets.py
sim_eval/tasks/: __init__.py
sim_eval/tasks/droid_tasks/: __init__.py  droid_put_everything_in_box.py
sim_eval/tasks/yam_tasks/: __init__.py  bimanual_put_everything_in_box.py
tools/: _export_lerobot_writer.py  _yam_catalog.py  episode_metrics.py  eval_policy.py  export_lerobot.py  import_lerobot.py  pipeline.py  query_dataset.py  view_episode.py
yam_rerun/: README.md  __init__.py  blueprint.py  server.py  smoke.py  takes.py  urdf_yam.py
