[project]
name = "molmoact2-policy-server"
version = "0.1.1"
description = "MolmoAct2 inference server (FastAPI)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers>=4.57,<4.58",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "huggingface-hub[cli]>=0.36",
    "hf-transfer>=0.1.8",
    "pillow>=10",
    "numpy>=1.26,<3",
    "einops>=0.7",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "json-numpy>=2.1.0",
    "mani-skill>=3.0.1",
    "tyro>=1.0.13",
    "imageio>=2.37.3",
    "transforms3d>=0.4.2",
    "gymnasium>=1.3.0",
]

[tool.uv]
# Resolve CUDA-12.1 PyTorch wheels from the official PyTorch index.
extra-index-url = ["https://download.pytorch.org/whl/cu121"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
